# zimppy

./: .gitignore  Cargo.toml  LICENSE  PROBLEM.md  README.md  SKILL.md  package-lock.json  package.json  tsconfig.json
.factory/: init.sh  services.yaml
.factory/skills/integration-worker/: SKILL.md
.factory/skills/protocol-worker/: SKILL.md
.factory/skills/zcash-backend-worker/: SKILL.md
.factory/validation/protocol-core/scrutiny/: synthesis.json
.factory/validation/protocol-core/scrutiny/reviews/: mpp-challenge-surface-and-problem-details.json  protocol-core-startup-test-resilience-fix.json  remote-lightwalletd-connectivity-foundation.json  repo-bootstrap-dual-runtime-skeleton.json  rust-backend-wallet-adapter-and-memo-primitives.json
apps/ai-server/: Cargo.toml
apps/ai-server/src/: main.rs
apps/api/src/: config.ts  payment.ts  server.ts
apps/api/test/: config.test.ts  health.test.ts  protected-route.test.ts  startup-behavior.test.ts
apps/demo/: agent.ts  autopay-cli.ts  autopay.ts  block-progress.ts  mcp-pay.ts  mcp-repl.ts  package.json  pay.ts  socket-transport.ts  zimppy-cli.ts
apps/mcp-server/: package.json
apps/mcp-server/src/: app.ts  server.ts  socket-server.ts
apps/rust-server/: Cargo.toml  package.json
apps/rust-server/src/: main.rs
apps/ts-server/: package.json
config/: server-wallet.example.json
crates/: README.md
crates/zimppy/: Cargo.toml
crates/zimppy-backend/: Cargo.toml
crates/zimppy-backend/src/: lib.rs  main.rs
crates/zimppy-core/: Cargo.toml  README.md
crates/zimppy-core/src/: derive_ivk.rs  keygen.rs  lib.rs  replay.rs  rpc.rs  server.rs  shielded.rs  transparent.rs
crates/zimppy-core/tests/: ivk_roundtrip.rs  live_e2e_server.rs  live_faucet.rs  live_orchard.rs  live_real_mpp.rs
crates/zimppy-napi/: Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/zimppy-napi/src/: lib.rs
crates/zimppy-ports/: Cargo.toml
crates/zimppy-ports/src/: lib.rs
crates/zimppy-rs/: Cargo.toml  README.md
crates/zimppy-rs/src/: axum.rs  charge.rs  lib.rs  pool.rs  provider.rs  session.rs  sse.rs
crates/zimppy-wallet/: Cargo.toml  README.md
crates/zimppy-wallet/src/: config.rs  encryption.rs  error.rs  lib.rs  main.rs
crates/zimppy/src/: lib.rs
demo/: README.md
demo/ai-summarizer/: run.sh
demo/charge/: run.sh
demo/opencode/: AGENTS.md  SKILL.md  opencode.json
demo/session/: run.sh
demo/stream/: run.sh
docker/opencode/: Dockerfile  opencode.json
docs/plans/: 2026-04-05-multi-account-infra.md
docs/superpowers/plans/: 2026-04-04-v05-transparent-support.md
examples/fortune-teller/client/: Cargo.toml
examples/fortune-teller/client/src/: main.rs
examples/fortune-teller/demos/charge/: run.sh
examples/fortune-teller/demos/session/: run.sh
examples/fortune-teller/demos/stream/: run.sh
examples/fortune-teller/server/: Cargo.toml
examples/fortune-teller/server/src/: main.rs
examples/llm-summarizer/demos/: run.sh
examples/llm-summarizer/server/: Cargo.toml
examples/llm-summarizer/server/src/: main.rs
examples/mcp-server/src/: app.ts  server.ts  socket-server.ts
examples/opencode-agent/: .gitignore
examples/opencode-agent/docker/: Dockerfile  opencode.json
examples/send-test/: Cargo.toml
examples/send-test/src/: main.rs
examples/ts-server/: package.json
examples/ts-server/src/: server.ts  test-multi-account.ts  transparent-server.ts
patches/: zingolib-checkpoint-fix.patch
scripts/: demo-agent-cli.sh  demo-agent.sh  demo-client.sh  demo-mcp.sh  demo-opencode.sh  demo-session.sh  demo-stream.sh  demo-ts.sh  demo.sh  lint.mjs  live-e2e.sh  session-client.sh  stream-client.sh
site/: index.html  release-v05.html  tweet-v05.md
