[workspace]
members = ["crates/zimppy-core", "crates/zimppy-napi", "crates/zimppy-rs", "crates/zimppy-wallet", "examples/fortune-teller/server", "examples/llm-summarizer/server"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
