[workspace]
members = ["crates/zimppy-core", "crates/zimppy-napi", "crates/zimppy-rs", "crates/zimppy-wallet", "examples/fortune-teller/server", "examples/llm-summarizer/server"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.2.0"
repository = "https://github.com/betterclever/zimppy"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

# Patch zingolib to fix Sapling checkpoint required for Orchard-only spends
# See: https://github.com/zingolabs/zingolib/issues/2267
[patch."https://github.com/zingolabs/zingolib.git"]
zingolib = { path = "/tmp/zingolib-patched/zingolib" }
pepper-sync = { path = "/tmp/zingolib-patched/pepper-sync" }
