[workspace]
members = ["crates/zimppy", "crates/zimppy-core", "crates/zimppy-napi", "crates/zimppy-rs", "crates/zimppy-wallet", "examples/fortune-teller/server", "examples/fortune-teller/client", "examples/llm-summarizer/server", "examples/send-test"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.4.0"
repository = "https://github.com/betterclever/zimppy"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
