[package]
name = "zimppy-ai-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "zimppy-ai-server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
zimppy-rs = { path = "../../crates/zimppy-rs" }

[lints]
workspace = true
