[package]
name = "zimppy-rust-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "zimppy-rust-server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
zimppy-rs = { path = "../../crates/zimppy-rs" }

[lints]
workspace = true
