[package]
name = "zimppy-backend"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "zimppy-backend"
path = "src/main.rs"

[dependencies]
bech32 = "0.9"
bs58 = { version = "0.5", features = ["check"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"
zimppy-core = { path = "../zimppy-core" }
