[package]
name = "zimppy-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "zimppy-core-server"
path = "src/server.rs"

[dependencies]
axum = "0.8"
bech32 = "0.9"
bs58 = { version = "0.5", features = ["check"] }
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

[lints]
workspace = true
