[package]
name = "zimppy-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "zimppy-core-server"
path = "src/server.rs"

[[bin]]
name = "zimppy-keygen"
path = "src/keygen.rs"
required-features = ["keygen"]

[dependencies]
axum = "0.8"
bech32 = "0.9"
bs58 = { version = "0.5", features = ["check"] }
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Zcash shielded verification
zcash_primitives = { version = "0.26", optional = true }
zcash_note_encryption = { version = "0.4", optional = true }
zcash_protocol = { version = "0.7", optional = true }
orchard = { version = "0.11", optional = true }
sapling-crypto = { version = "0.5", optional = true }
jubjub = { version = "0.10", optional = true }
zcash_keys = { version = "0.12", features = ["sapling", "orchard"], optional = true }
zcash_address = { version = "0.10", optional = true }
zip32 = { version = "0.2", optional = true }
rand = { version = "0.8", optional = true }

[features]
default = []
shielded = ["dep:zcash_primitives", "dep:zcash_note_encryption", "dep:zcash_protocol", "dep:orchard", "dep:sapling-crypto", "dep:jubjub"]
keygen = ["shielded", "dep:zcash_keys", "dep:zcash_address", "dep:zip32", "dep:rand"]

[lints]
workspace = true
