[package]
name = "zimppy-napi"
description = "NAPI-RS bindings for Zimppy Zcash verification and wallet"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
zimppy-core = { path = "../zimppy-core", features = ["shielded"] }
zimppy-wallet = { path = "../zimppy-wallet" }
zcash_protocol = "0.7"
napi = { version = "2", features = ["napi8", "async"] }
napi-derive = "2"
tokio = { version = "1", features = ["sync"] }

[build-dependencies]
napi-build = "2"

[lints]
workspace = true
