[package]
name = "zimppy-rs"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
zimppy-core = { path = "../zimppy-core", features = ["shielded"] }
mpp = { git = "https://github.com/tempoxyz/mpp-rs", features = ["server", "client"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
