[package]
name = "zimppy-rs"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
zimppy-core = { path = "../zimppy-core", features = ["shielded"] }
zimppy-wallet = { path = "../zimppy-wallet" }
futures-lite = "2"
hex = "0.4"
mpp = { git = "https://github.com/tempoxyz/mpp-rs", features = ["server", "client"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
