[package]
name = "zimppy-rs"
description = "Rust SDK for Zimppy — charge, session, and streaming payment methods on Zcash"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
zimppy-core = { path = "../zimppy-core", features = ["shielded"] }
zimppy-wallet = { path = "../zimppy-wallet" }
futures-lite = "2"
hex = "0.4"
mpp = { git = "https://github.com/tempoxyz/mpp-rs", features = ["server", "client", "axum"] }
chrono = "0.4"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
