[package]
name = "zimppy-wallet"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
description = "Native Zcash wallet for Zimppy, powered by zingolib"

[dependencies]
zingolib = { git = "https://github.com/zingolabs/zingolib.git", tag = "zingolib_v3.0.1" }
zcash_protocol = "0.7"
shardtree = "0.6"
zcash_keys = { version = "0.12", features = ["orchard"] }
zcash_address = "0.10"
hex = "0.4"
bip0039 = { version = "0.13", features = ["rand"] }
rustls = "0.23"
zip32 = "0.2"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
tokio = { version = "1.50", features = ["full"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "6"
libc = "0.2"
indicatif = "0.17"
console = "0.15"

[lints]
workspace = true
