[package]
name = "zimppy-rust-client"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "zimppy-rust-client"
path = "src/main.rs"

[dependencies]
mpp = { version = "0.8.0", features = ["client"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
zcash_protocol = "0.7"
zimppy-rs = { path = "../../../crates/zimppy-rs" }
zimppy-wallet = { path = "../../../crates/zimppy-wallet" }

[lints]
workspace = true
